theme_kommit - correct filed width on the register attendance page.
Related to-do: Bergen: Search and user per page fields too wide
https://3.basecamp.com/3304540/buckets/1115814/todos/239418257

--- a/theme/kommit/less/theme/course.less
+++ b/theme/kommit/less/theme/course.less
@@ -127,18 +127,20 @@ Courses and categories lists, from Mary Evans
 // Jon Jack
 // ------------------------------------------
 
-.format-netcourse {
-  .mform .fitem div.fitemtitle {
-    width: 205px;
-      textarea[cols], input[size] {
-      width: 100%;
-      }
-  }
-  .mform .fitem .felement {
-    margin-left: 225px;
-      textarea[cols], input[size] {
-      width: 100%;
-      }
+#page-course-edit {
+    &.format-netcourse {
+        .mform .fitem div.fitemtitle {
+            width: 205px;
+            textarea[cols], input[size] {
+                width: 100%;
+            }
+        }
+        .mform .fitem .felement {
+            margin-left: 225px;
+            textarea[cols], input[size] {
+                width: 100%;
+            }
+        }
     }
 }
 
