--- a/theme/kommit/style/theme.css
+++ b/theme/kommit/style/theme.css
@@ -567,18 +567,18 @@ Courses and categories lists, from Mary Evans
   margin-bottom: 0;
   width: 200px !important;
 }
-.format-netcourse .mform .fitem div.fitemtitle {
+#page-course-edit.format-netcourse .mform .fitem div.fitemtitle {
   width: 205px;
 }
-.format-netcourse .mform .fitem div.fitemtitle textarea[cols],
-.format-netcourse .mform .fitem div.fitemtitle input[size] {
+#page-course-edit.format-netcourse .mform .fitem div.fitemtitle textarea[cols],
+#page-course-edit.format-netcourse .mform .fitem div.fitemtitle input[size] {
   width: 100%;
 }
-.format-netcourse .mform .fitem .felement {
+#page-course-edit.format-netcourse .mform .fitem .felement {
   margin-left: 225px;
 }
-.format-netcourse .mform .fitem .felement textarea[cols],
-.format-netcourse .mform .fitem .felement input[size] {
+#page-course-edit.format-netcourse .mform .fitem .felement textarea[cols],
+#page-course-edit.format-netcourse .mform .fitem .felement input[size] {
   width: 100%;
 }
 .empty-region-side-pre #region-bs-main-and-pre.span9 #region-main,
